Added license comments to all files.  Removed WinIncludes.

--- a/BleachLeakDetector/BleachLeakDetector/BleachLeakDetector.vcxproj
+++ b/BleachLeakDetector/BleachLeakDetector/BleachLeakDetector.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BleachNew.h" />
+    <ClInclude Include="src\BleachNewConfig.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BleachNew.cpp" />
