--- a/BleachLeakDetector/BleachLeakDetector/BleachLeakDetector.vcxproj.filters
+++ b/BleachLeakDetector/BleachLeakDetector/BleachLeakDetector.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="src\BleachNew.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\BleachNewConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Example.cpp">
